--- a/css/styles.css
+++ b/css/styles.css
@@ -156,9 +156,11 @@ margin: 20px 10px;
     transform: rotate(0deg);
     position:  static;
     width: 50%;
-
-
   }
+   #pricing{
+    padding: 45px;
+  }
+   
   #title{
     text-align: center;
   }
