--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,10 @@ margin: 20px 10px;
    #pricing{
     padding: 45px;
   }
+  
+   .testimonial-text{
+    font-size: 20px;
+  }
    
   #title{
     text-align: center;
